--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "",
+    "name": "frank-2",
+    "start_url": "/",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
