--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
     "name": "frank-2",
-    "start_url": "/",
+    // "start_url": "/",
     "icons": [
         {
-            "src": "/android-chrome-192x192.png",
+            "src": "android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-256x256.png",
+            "src": "android-chrome-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         }
